# SC4_lib

./: .gitignore  README.md  detrend_phase.py  pyproject.toml  test_detrend_phase.py
scintkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scintkit/: __init__.py
src/scintkit/pipelines/: __init__.py  auto.py  lvl0_convert_to_pq.py
src/scintkit/preprocessing/: format.py
src/scintkit/reading/: binaryreaders.py
src/scintkit/services/: __init__.py  compute.py  convert_to_parquet.py  phase_detrend.py
src/scintpi_tools/io/: __init__.py  binaryreaders.py
src/scintpi_tools/pipelines/: lvl0_convert_to_pq.py
src/scintpi_tools/services/: convert_to_parquet.py  detrend_phase.py
src/scintpi_tools/utils/: ensure_format.py
tests/: compare_oct11.ipynb
workflows/: bin2pq.py
